# backend_django_guide

./: .gitignore  .gitmodules  README.md  pyproject.toml
01_Introduction/: Prompts.md  README.md
01_Introduction/lab/02_create_html_document/: index.html
01_Introduction/lab/03_styling_a_page/: styles.css
01_Introduction/lab/04_create_a_web_page/: index.html
01_Introduction/lab/05_bootstrap_example/: README.md  index.html
01_Introduction/lab/06_bootstrap_components/: README.md
01_Introduction/lab/07_bio_page/: README.md  index.html
02_Databases/: README.md
02_Databases/lab/01_numbers/: Instructions.md
02_Databases/lab/02_strings/: Instructions.md
02_Databases/lab/03_default_values/: Instructions.md
02_Databases/lab/04_choosing_types/: Instructions.md
02_Databases/lab/05_create_populate_table/: Instructions.md
02_Databases/lab/06_table_creation/: Instructions.md
02_Databases/lab/07_record_deletion/: Instructions.md
02_Databases/lab/08_order_by_where/: Instructions.md  README.md
02_Databases/lab/09_database_schema/: Instructions.md  README.md
02_Databases/lab/chinook/: README.md
03_Django/: README.md
04_APIs/: README.md
04_APIs/lab/06-user-account-management/: Instructions.md
04_APIs/lab/07-littlelemon-api-project/: .gitignore  Instructions.md
05_FullStack/: README.md
05_FullStack/lab/01-grid-layout/: Instructions.md  styles.css
06_Capstone/: README.md
06_Flask_SQLAlchemy_DataModelling/: README.md  course_config.json
06_SQL_DataModeling/: README.md  course_config.json  course_config.yaml
07_SoftwareArchitecture/: README.md
08_IAM/: README.md
08_NGINX/: README.md
08_NGINX_Caddy/: README.md
prompts/: extract_course_summary.md
skills/extract-course-summary/: SKILL.md
skills/format-for-learning/: SKILL.md
skills/process-course-summary/: SKILL.md
skills/summarize-for-learning/: SKILL.md
(+95 files in other folders)
