[project]
name = "backend-django-guide"
version = "0.1.0"
description = "A Python environment for the Web-App Back-End Development Guide."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "ag2[openai]",
    "anthropic",
    "autopep8",
    "beeai-framework",
    "bitsandbytes",
    "chromadb",
    "crewai",
    "crewai-tools",
    "datasets",
    "deepagents",
    "django",
    "djangorestframework",
    "djangorestframework-xml",
    "djoser",
    "docling",
    "easyocr",
    "evaluate",
    "fastapi",
    "flask",
    "gradio",
    "hf_xet",
    "huggingface_hub<1",
    "jupyter",
    "jupyterlab",
    "langchain",
    "langchain-anthropic",
    "langchain-classic",
    "langchain-community",
    "langchain-experimental",
    "langchain-ibm",
    "langchain-openai",
    "langchain-tavily",
    "langchain-text-splitters",
    "langfuse",
    "langgraph",
    "langsmith",
    "matplotlib",
    "mcp",
    "mysql-connector-python",
    "mysqlclient",
    "numpy<2.3",
    "onnx",
    "onnxruntime",
    "opencv-python-headless>=4.12.0.88",
    "openai",
    "opentelemetry-instrumentation-langchain",
    "pandas",
    "peft",
    "pip",
    "pydantic",
    "pydantic-ai",
    "pydantic-settings",
    "pypdf",
    "pytest",
    "python-docx",
    "python-dotenv",
    "pytube",
    "rank-bm25",
    "safetensors",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "sqlalchemy",
    "tavily-python",
    "tensorboard",
    "tiktoken",
    "torch",
    "torchtext",
    "tqdm",
    "transformers[torch]",
    "typer<0.22",
    "umap-learn",
    "wikipedia",
    "wordcloud",
    "youtube-transcript-api",
    "yt-dlp",
    "django-debug-toolbar>=7.0.0",
    "bleach>=6.3.0",
]

[tool.uv]
package = false
